verif/test/deca/context/invalid/object/bad-number-args-verif.res
src/test/deca/context/invalid/object/bad-number-args.deca:13:20: Incorrect number of arguments for method 'myMethod'. Expected: 2, Found: 1
